# LS_Racing_F1

./: .gitignore  CMakeLists.txt  LS_allegro.h  base.c  base.h  carrera.c  carrera.h  clasificacion.c  clasificacion.h  conf_Coche.c  conf_Coche.h  corredor.c  corredor.h  corredores.c  corredores.h  fitxerGPs.txt  fitxerPeces.txt  funciones_Basicas.c  funciones_Basicas.h  guardar_Temporada.c  guardar_Temporada.h  leer_Ficheros.c  leer_Ficheros.h  listaGPs.c  listaGPs.h  main.c  menu.c  menu.h  pieza.c  pieza.h  premio.c  premio.h  tiempo.c  tiempo.h  tipos.h
